# django-rest-test

./: README.rst  pyproject.toml
blog/: db.sqlite3
blog/accounts/: models.py  tests.py  urls.py
blog/accounts/api/: serializers.py  views.py
blog/accounts/migrations/: 0001_initial.py
blog/blog/: settings.py  urls.py
blog/likes/: models.py  tests.py  urls.py
blog/likes/api/: serializers.py  views.py
blog/likes/migrations/: 0001_initial.py
blog/posts/: models.py  tests.py  urls.py  views.py
blog/posts/api/: permissions.py  serializers.py  views.py
blog/posts/migrations/: 0001_initial.py
tests/: test_django-rest-test.py
